Don't ignore the "use relative path" checkbox in the playlist export dialog.

BUG: 250689